--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Ignore all
+*
+
+# Unignore all with extensions
+!*.*
+
+# Unignore all dirs
+!*/
+
 # Prerequisites
 *.d
 
@@ -54,3 +63,4 @@ dkms.conf
 
 ModernC.pdf
 *.*~
+
